--- a/src/main/resources/templates/fragments/delete_confirm.html
+++ b/src/main/resources/templates/fragments/delete_confirm.html
@@ -5,13 +5,13 @@
 		<div class="modal fade" th:id="${id}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			<div class="modal-dialog modal-sm">
 				<div class="modal-content">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-						<h4 class="modal-title" id="myModalLabel" th:text="#{confirmation.msg}"></h4>
-					</div>
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel" th:text="#{confirmation.msg}">Modal title</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
 					<div class="modal-footer">
 						<a th:href="@{${href}}" class="btn btn-danger" th:text="#{button.delete}">Delete</a>
-						<button type="button" class="btn btn-default" data-dismiss="modal" th:text="#{button.cancel}">Cancel</button>
+						<button type="button" class="btn btn-default" data-bs-dismiss="modal" th:text="#{button.cancel}">Cancel</button>
 					</div>
 				</div>
 			</div>
