--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -8,27 +8,32 @@
 		<div layout:fragment="content">
 			<h1 th:text="#{user.list.title} + ' (' + ${allUsers.size()} + ')'"></h1>
 			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-4" th:each="userDto : ${allUsers}">
-					<div class="panel ">
-						<div class="panel-body user-panel-body">
+				<div class="col-12 col-sm-6 col-md-4" th:each="userDto : ${allUsers}">
+					<div class="card mb-3">
+						<div class="card-body">
 							<div class="row">
-								<div class="col-xs-7 user-label">
+								<div class="col-2">
 									<span th:replace="~{fragments/profile_image :: profile_image_big_with_popup(${userDto.userProfileImageKey})}"></span>
-									<span th:text="${userDto.username}"></span>
 					  			</div>
-					  			<div class="col-xs-5">
-					  				<div class="row custom-button-group">
-					  					<a sec:authorize="hasAuthority('PERM_EDIT_USER')" th:href="@{'/user/' + ${userDto.userId}}" class="btn btn-primary" role="button">
-					  						<span class="fas fa-edit"></span>
-				  						</a>
-									</div>
+                                <div class="col-7">
+                                    <span th:text="${userDto.username}"></span>
+                                </div>
+					  			<div class="col-3">
+                                    <a sec:authorize="hasAuthority('PERM_EDIT_USER')" th:href="@{'/user/' + ${userDto.userId}}" class="btn btn-primary" role="button">
+                                        <span class="fas fa-edit"></span>
+                                    </a>
 					  			</div>
 	      					</div>
 					   </div>
 					</div>
 				</div>
 			</div>
-			<a href="#" th:href="@{/user/create}" class="btn btn-primary" role="button" th:text="#{user.list.createUser}"></a>
+
+            <div class="row mt-3">
+                <div class="col-12 col-sm-6 col-md-4">
+                    <a href="#" th:href="@{/user/create}" class="btn btn-primary" role="button" th:text="#{user.list.createUser}"></a>
+                </div>
+            </div>
 		</div>
 	</body>
 </html>
