--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -207,9 +207,8 @@
                             <a class="dropdown-item" th:href="${@webSecurityUtil.resolveH2Path()}" target="_blank">H2 Console</a>
                         </li>
                     </ul>
-                </li>
             </ul>
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <div class="d-flex navbar-nav">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" th:classappend="${classes}" id="language" role="button" data-bs-toggle="dropdown"
                        aria-expanded="false">
@@ -256,7 +255,8 @@
                         </li>
                     </ul>
                 </li>
-            </ul>
+                </li>
+            </div>
         </div>
     </div>
 </nav>
