--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -209,7 +209,7 @@
                     </ul>
             </ul>
             <div class="d-flex navbar-nav">
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown me-2">
                     <a class="nav-link dropdown-toggle" th:classappend="${classes}" id="language" role="button" data-bs-toggle="dropdown"
                        aria-expanded="false">
                         <img th:src="${@languageUtil.getImageLanguageIconPath()}" />
@@ -224,18 +224,13 @@
                         <li><a th:href="${@languageUtil.buildUrl('sv')}" class="dropdown-item language"><img src="/images/lang/sv.png" th:text="' '+#{language.sv}" /></a></li>
                     </ul>
                 </li>
+                <span class="navbar-text me-3" th:text="${@webSecurityUtil.getCurrentUsername()}"></span>
                 <li class="nav-item dropdown mt-1">
                     <a class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                         <img th:src="@{'/gallery/showthumb/' + ${@webSecurityUtil.getCurrentUserProfileImageKey()}}"
                              th:alt="${@webSecurityUtil.getCurrentUsername()}" width="32" height="32" class="rounded-circle">
                     </a>
                     <ul class="dropdown-menu">
-                        <li>
-                            <div class="dropdown-item fw-lighter p-2 text-center" th:text="${@webSecurityUtil.getCurrentUsername()}">Light with contrasting color</div>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
                         <li>
                             <a class="dropdown-item" th:href="@{/profile/changePassword}" th:text="#{navigation.changePassword}"></a>
                         </li>
