--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -170,23 +170,14 @@
                         <li sec:authorize="hasAuthority('PERM_USER_ADMINISTRATION')">
                             <a class="dropdown-item" th:href="@{/user}" th:text="#{navigation.user}"></a>
                         </li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
                         <li sec:authorize="hasAuthority('PERM_ADMINISTRATION')">
                             <a class="dropdown-item" th:href="@{/user/importexport}" th:text="#{user.importexport.title}"></a>
                         </li>
                         <li sec:authorize="hasAuthority('PERM_ADMINISTRATION')">
                             <a class="dropdown-item" th:href="@{/importexport}" th:text="#{importexport.title}"></a>
-                        </li>
-                        <li sec:authorize="hasAuthority('PERM_SYSTEM_INFO')">
-                            <a class="dropdown-item" th:href="@{/systeminfo}" th:text="#{navigation.systemInfo}"></a>
-                        </li>
-                        <li sec:authorize="hasAuthority('PERM_SHOW_ACTIVE_USERS')">
-                            <a class="dropdown-item" th:href="@{/administration/active/users}" th:text="#{navigation.activeUserList}"></a>
-                        </li>
-                        <li sec:authorize="hasAuthority('PERM_SHOW_LAST_LOGINS')">
-                            <a class="dropdown-item" th:href="@{/administration/lastlogins}" th:text="#{navigation.lastlogin}"></a>
-                        </li>
-                        <li th:if="${@webSecurityUtil.isDemoDataMenuEntryEnabled()}" sec:authorize="hasAuthority('PERM_ADMINISTRATION')">
-                            <a class="dropdown-item" th:href="@{/administration}" th:text="#{navigation.dataCreation}"></a>
                         </li>
                         <li sec:authorize="hasAuthority('PERM_ADMINISTRATION')">
                             <a class="dropdown-item" th:href="@{/excelimport/show}" th:text="#{navigation.excelimport}"></a>
@@ -194,11 +185,35 @@
                         <li sec:authorize="hasAuthority('PERM_ADMINISTRATION')">
                             <a class="dropdown-item" th:href="@{/excelexport/show}" th:text="#{navigation.excelexport}"></a>
                         </li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li sec:authorize="hasAuthority('PERM_SYSTEM_INFO')">
+                            <a class="dropdown-item" th:href="@{/systeminfo}" th:text="#{navigation.systemInfo}"></a>
+                        </li>
                         <li sec:authorize="hasAuthority('PERM_ADMINISTRATION')">
                             <a class="dropdown-item" th:href="@{/config/show}" th:text="#{navigation.loggingAndCaching}"></a>
                         </li>
                         <li sec:authorize="hasAuthority('PERM_ADMINISTRATION')">
                             <a class="dropdown-item" th:href="@{/runtimesettings/show}" th:text="#{navigation.runtime.configuration}"></a>
+                        </li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li sec:authorize="hasAuthority('PERM_SHOW_ACTIVE_USERS')">
+                            <a class="dropdown-item" th:href="@{/administration/active/users}" th:text="#{navigation.activeUserList}"></a>
+                        </li>
+                        <li sec:authorize="hasAuthority('PERM_SHOW_LAST_LOGINS')">
+                            <a class="dropdown-item" th:href="@{/administration/lastlogins}" th:text="#{navigation.lastlogin}"></a>
+                        </li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li th:if="${@webSecurityUtil.isDemoDataMenuEntryEnabled()}" sec:authorize="hasAuthority('PERM_ADMINISTRATION')">
+                            <a class="dropdown-item" th:href="@{/administration}" th:text="#{navigation.dataCreation}"></a>
+                        </li>
+                        <li>
+                            <hr class="dropdown-divider">
                         </li>
                         <li th:if="${@runtimeSettingsUtil.isH2ConsoleEnabled()}" sec:authorize="hasAuthority('PERM_ADMINISTRATION')">
                             <a class="dropdown-item" th:href="@{/backup/show}" th:text="#{navigation.backup}"></a>
