--- a/src/main/resources/templates/user/user_import_export.html
+++ b/src/main/resources/templates/user/user_import_export.html
@@ -6,32 +6,24 @@
 	<body>
 		<div layout:fragment="content">
 			<h2 th:text="#{user.importexport.title}"></h2>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<div class="row">
-					<div class="panel ">
-						<div class="user panel-heading">
-							  <span th:text="#{user.importexport.export.name}"></span>
-						</div>
-						<div class="panel-body">
-							<a href="#" th:href="@{/user/export}" th:text="#{user.importexport.export.users}"></a>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<form th:action="@{/user/import}" th:object="${userImportExportCommand}" method="post" enctype="multipart/form-data" role="form">
-						<div class="panel ">
-							<div class="user panel-heading">
-								<span th:text="#{user.importexport.import.file}"></span>
-							</div>
-							<div class="panel-body">
-								<input id="jsonFile" type="file" th:field="*{jsonFile}" class="btn btn-default btn-file" />
-								<br/>
-								<input type="submit" class="btn btn-primary" th:value="#{user.importexport.upload.button}" />
-							</div>
-						</div>
-					</form>
-				</div>
-			</div>
+            <div class="row">
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="mb-5">
+                        <form th:action="@{/user/import}" th:object="${userImportExportCommand}" method="post" enctype="multipart/form-data" role="form">
+                            <h3 th:text="#{user.importexport.import.file}"></h3>
+                            <input id="jsonFile" type="file" th:field="*{jsonFile}" class="btn btn-default btn-file" />
+                            <br/>
+                            <input type="submit" class="btn btn-primary" th:value="#{user.importexport.upload.button}" />
+                        </form>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="mb-5">
+                        <h3 th:text="#{user.importexport.export.name}"></h3>
+                        <a href="#" th:href="@{/user/export}" th:text="#{user.importexport.export.users}"></a>
+                    </div>
+                </div>
+            </div>
 		</div>
 	</body>
 </html>
