--- a/src/main/resources/templates/admin/excel_import.html
+++ b/src/main/resources/templates/admin/excel_import.html
@@ -7,31 +7,34 @@
 	<body>
 		<div layout:fragment="content">
 			<h2 th:text="#{excel.import.title}"></h2>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<div class="row">
-					<div class="panel ">
-						<div class="user panel-heading">
-							  <span th:text="#{excel.download.template.name}"></span>
-						</div>
-						<div class="panel-body">
-							<a href="#" th:href="@{/excelimport/download/template}" th:text="#{excel.download.template}"></a>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<form th:action="@{/excelimport/upload}" th:object="${excelUploadCommand}" method="post" enctype="multipart/form-data" role="form">
-						<div class="form-group">
-							<label for="myFile" th:text="#{excel.upload.file}"></label><br/>
-					    	<input id="myFile" type="file" th:field="*{myFile}" class="btn btn-default btn-file" />
-						</div>
-						<div class="form-group">
-							<span class="label label-danger" th:text="#{excel.download.hint.allMatchesDeleted}"></span>
-						</div>
-						<div class="form-group">
-							<input type="submit" class="btn btn-primary" th:value="#{excel.upload.button}" />
-						</div>
-					</form>
-				</div>
+            <div class="row">
+                <div class="col-12 col-sm-6 col-md-4">
+                    <form th:action="@{/excelimport/upload}" th:object="${excelUploadCommand}" method="post" enctype="multipart/form-data" role="form">
+                        <div class="card">
+                            <div class="card-header">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <span th:text="#{excel.upload.file}"></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <input id="myFile" type="file" th:field="*{myFile}" class="form-control btn btn-default btn-file" />
+                                <div class="row mt-3">
+                                    <div class="col-6">
+                                        <input type="submit" class="btn btn-primary" th:value="#{excel.upload.button}" />
+                                    </div>
+                                    <div class="col-6">
+                                        <a href="#" th:href="@{/excelimport/download/template}" th:text="#{excel.download.template}"></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-footer bg-warning">
+                                <span class="fw-light" th:text="#{excel.download.hint.allMatchesDeleted}"></span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
 			</div>
 		</div>
 	</body>
