--- a/src/main/resources/templates/admin/configuration.html
+++ b/src/main/resources/templates/admin/configuration.html
@@ -10,21 +10,23 @@
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<form id="changeLogLevelForm" th:action="@{/config/changeLogLevel}" th:object="${configurationCommand}" action="#" method="post" role="form">
 						<h2 th:text="#{administration.change.loglevel.title}"></h2>
-						<ul class="list-group">
+						<ul class="list-group mb-3">
 							<li class="list-group-item" th:each="level : ${configurationCommand.logLevel}">
-								<input type="radio" th:field="*{level}" th:value="${level}" /> 
-								<label th:for="${#ids.prev('level')}" th:text="${level}"></label>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" th:field="*{level}" th:value="${level}" />
+                                    <label class="form-check-label" th:for="${#ids.prev('level')}" th:text="${level}"></label>
+                                </div>
 							</li>
 						</ul>
-						<div class="form-group">
+						<div class="mb-3">
 							<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
 						</div>
 					</form>
 				</div>
-				<div class="visible-xs col-xs-12">
+				<div class="visible-xs col-12">
 					<hr/>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4">
+				<div class="col-12 col-sm-6 col-md-4">
 					<h2 th:text="#{administration.cache.title}"></h2>
 					<a class="btn btn-primary" role="button" th:href="@{/config/clearCache}" th:text="#{administration.clearCache}"></a>
 				</div>
