--- a/src/main/resources/templates/admin/lastlogins.html
+++ b/src/main/resources/templates/admin/lastlogins.html
@@ -7,16 +7,16 @@
 	<body>
 		<div layout:fragment="content">
 			<h1 th:text="#{lastlogins.title}"></h1>
-			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4" th:each="appUser : ${userList}">
-					<div class="panel ">
-						<div class="panel-heading">
-							<span th:text="${appUser.username}"></span>
-							<span class="right" th:text="${#temporals.format(appUser.lastLogin, #messages.msg('app.dateformatWithSeconds'))}"></span>
-						</div>
-					</div>
-				</div>
-			</div>
+            <div class="row">
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="card" th:each="appUser : ${userList}">
+                        <div class="card-header">
+                            <span th:text="${appUser.username}"></span>
+                            <span class="right" th:text="${#temporals.format(appUser.lastLogin, #messages.msg('app.dateformatWithSeconds'))}"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
 		</div>
 	</body>
 </html>
