--- a/src/main/resources/templates/bet/others.html
+++ b/src/main/resources/templates/bet/others.html
@@ -12,34 +12,30 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="row">
-                                <div class="col-12">
+                                <div class="col-9">
                                     <img class="flag" th:if="${allBetsCommand.getIconPathTeamOne() != null}" th:src="@{${allBetsCommand.getIconPathTeamOne()}}"/>
                                     <span class="fw-bold" th:text="${allBetsCommand.teamNameOne}"></span>
                                     <span> - </span>
                                     <img class="flag" th:if="${allBetsCommand.getIconPathTeamTwo() != null}" th:src="@{${allBetsCommand.getIconPathTeamTwo()}}"/>
                                     <span class="fw-bold" th:text="${allBetsCommand.teamNameTwo}"></span>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12">
+                                    <br/>
                                     <span th:text="${#temporals.format(allBetsCommand.kickOffDate, 'EEE dd. MMMM yyyy HH:mm')}"></span>
-                                </div>
-                                <div class="col-12">
+                                    <br/>
                                     <span th:text="#{${allBetsCommand.group.titleMsgKey}}"></span><span>,</span>
                                     <span th:text="${allBetsCommand.stadium}"></span>
+                                </div>
+                                <div class="col-3 mt-4">
+                                    <span class="badge rounded-pill bg-info big-badge" th:classappend="${allBetsCommand.match.getCssClassPenaltyWinnerOne()}"
+                                          th:text="${allBetsCommand.match.goalsTeamOne}"></span>
+                                    <span th:if="${allBetsCommand.match.goalsTeamOne != null}" class=""> : </span>
+                                    <span class="badge rounded-pill bg-info big-badge" th:classappend="${allBetsCommand.match.getCssClassPenaltyWinnerTwo()}"
+                                          th:text="${allBetsCommand.match.goalsTeamTwo}"></span>
                                 </div>
                             </div>
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-4">
-                                    <span class="badge rounded-pill bg-info big-badge" th:classappend="${allBetsCommand.match.getCssClassPenaltyWinnerOne()}"
-                                          th:text="${allBetsCommand.match.goalsTeamOne}"></span>
-                                    <span th:if="${allBetsCommand.match.goalsTeamOne != null}"> : </span>
-                                    <span class="badge rounded-pill bg-info big-badge" th:classappend="${allBetsCommand.match.getCssClassPenaltyWinnerTwo()}"
-                                          th:text="${allBetsCommand.match.goalsTeamTwo}"></span>
-                                </div>
-                                <div class="col-8">
+                                <div class="col-12">
                                     <span th:text="#{others.bet.groupBet} + ':'"></span>
                                     <span class="badge rounded-pill bg-success" th:text="${groupAvg.avgGoalsTeamOne}">1</span>
                                     <span> : </span>
