--- a/src/main/resources/templates/info/statistic.html
+++ b/src/main/resources/templates/info/statistic.html
@@ -7,22 +7,24 @@
 	<body>
 		<div layout:fragment="content">
 			<h1 th:text="#{statistics.title}"></h1>
-			<div class="row" th:if="${not #lists.isEmpty(statisticList)}">
-				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-					<img class="flag" th:src="@{${favouriteCountry.getIconPath()}}"/> <span th:text="#{statistics.legend.favouriteCountry}"></span>,
-					<span class="fas fa-magic" aria-hidden="true"></span> <span th:text="#{statistics.legend.bonusPoints}"></span>,
-
+			<div class="row mb-3" th:if="${not #lists.isEmpty(statisticList)}">
+				<div class="col-6 col-sm-2 mb-2">
+					<img class="flag" th:src="@{${favouriteCountry.getIconPath()}}"/> <span th:text="#{statistics.legend.favouriteCountry}"></span>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-8 col-lg-9">
-					<span class="fas fa-star blue" aria-hidden="true"></span> <span th:text="#{statistics.legend.topBetter}"></span>,
+                <div class="col-6 col-sm-2 mb-2">
+                    <span class="fas fa-magic" aria-hidden="true"></span> <span th:text="#{statistics.legend.bonusPoints}"></span>
+                </div>
+                <div class="col-6 col-sm-2 mb-2">
+                    <span class="fas fa-star blue" aria-hidden="true"></span> <span th:text="#{statistics.legend.topBetter}"></span>
+                </div>
+				<div class="col-6 col-sm-2 mb-2">
 					<span class="fas fa-lightbulb red" aria-hidden="true"></span> <span th:text="#{statistics.legend.flopBetter}"></span>
 				</div>
 			</div>
-			<br/>
 			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-4" th:each="statistic : ${statisticList}" style="max-height: 176px;">
-					<div class="panel  panel-statistic">
-						<div class="panel-heading">
+				<div class="col-12 col-sm-6 col-md-4" th:each="statistic : ${statisticList}" style="max-height: 176px;">
+					<div class="card">
+						<div class="card-header">
 							<span th:replace="~{fragments/profile_image :: profile_image_small_with_popup(${@webSecurityUtil.getUserProfileImageKeyFor(statistic.username)})}"></span>
 							<span th:text="${statistic.username} + ' (' + ${statistic.getSum()} + ') '"></span>
 							<span th:if="${statistic.minPointsCandidate}" class="fas fa-lightbulb red" aria-hidden="true"></span>
@@ -35,9 +37,9 @@
 							<span class="fas fa-magic" aria-hidden="true"></span>
 							<span th:text="'(' + ${statistic.getPointsForExtraBets()} + ')'"></span>
 					   </div>
-					   <div class="panel-body">
+					   <div class="card-body">
 						   <div class="table-responsive">
-						   		<table class="table table-condensed table-centered">
+						   		<table class="table table-condensed table-centered table-striped">
 									<thead>
 										<tr class="active">
 											<th><i class="fas fa-users" aria-hidden="true"></i></th>
