--- a/src/main/resources/templates/image/image_upload.html
+++ b/src/main/resources/templates/image/image_upload.html
@@ -9,49 +9,49 @@
 	<body>
 		<div layout:fragment="content" class="container">
 			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-4">
+				<div class="col-12 col-sm-6 col-md-4">
 					<form th:action="@{/image/upload}" th:object="${imageUploadCommand}" method="post" enctype="multipart/form-data" role="form">
-						<div class="form-group">
-							<label th:text="#{image.upload.groupName}"></label><br/>
+						<div class="mb-3">
+							<label class="form-label" th:text="#{image.upload.groupName}"></label><br/>
 							<select th:field="*{galleryGroup}" class="form-control">
-							  <option th:each="imageGroupName : ${availableImageGroups}" th:value="${imageGroupName}" th:text="${imageGroupName}"></option>
+							    <option th:each="imageGroupName : ${availableImageGroups}" th:value="${imageGroupName}" th:text="${imageGroupName}"></option>
 							</select>
 						</div>
-						<div class="form-group" sec:authorize="hasAuthority('PERM_EDIT_IMAGE_GROUP')">
-							<label th:text="#{image.upload.editGroup}"></label><br/>
+						<div class="mb-3" sec:authorize="hasAuthority('PERM_EDIT_IMAGE_GROUP')">
+							<label class="form-label" th:text="#{image.upload.editGroup}"></label><br/>
 							<a href="#" th:href="@{/imagegroup/show}" class="btn btn-info" role="button" th:text="#{image.upload.msg.editGroup}"></a>
 						</div>
-						<div class="form-group">
-							<label th:text="#{image.upload.file}"></label><br/>
-					    	<input id="upload" type="file" accept="image/jpeg"/>
+						<div class="">
+							<label class="form-label"th:text="#{image.upload.file}"></label><br/>
+					    	<input class="form-control" id="upload" type="file" accept="image/jpeg"/>
 						</div>
-						<div class="form-group">
+						<div class="">
 							<input id="myFileBase64" type="hidden" name="myFileBase64" value="" />
 							<img id="preview" class="img-responsive"/>
 						</div>
-						<div class="form-group">
-							<label th:text="#{image.upload.rotate}"></label><br/>
-							<button type="button" class="rotate-image-btn btn" data-deg="-90">
+						<div class="mb-3">
+							<label class="form-label" th:text="#{image.upload.rotate}"></label><br/>
+							<button type="button" class="btn btn-dark" data-deg="-90">
 								<i class="fas fa-undo" aria-hidden="true"></i>
 							</button>
-							<button type="button" class="rotate-image-btn btn" data-deg="90">
+							<button type="button" class="btn btn-dark" data-deg="90">
 								<i class="fas fa-redo" aria-hidden="true"></i>
 							</button>
 						</div>
-						<div class="form-group">
-							<label th:text="#{image.upload.description}"></label><br/>
+						<div class="mb-3">
+							<label class="form-label" th:text="#{image.upload.description}"></label><br/>
 							<input type="text" th:field="*{description}" class="form-control" />
 						</div>
-						<div class="form-group">
+						<div class="mb-3">
 							<input type="submit" class="btn btn-primary" th:value="#{image.upload.button}" />
 							<a href="#" th:href="@{/gallery/show}" class="btn btn-default" th:text="#{image.upload.toImageGallery}"></a>
-						</div>				        
+						</div>
 				    </form>
 			    </div>
 			</div>
 			<br/>
 			<div class="row">
-				<div class="col-xs-12 col-sm-12 col-md-12">
+				<div class="col-12 col-sm-12 col-md-12">
 					<div class="table-responsive">
 				   		<table class="table table-condensed table-striped table-responsive" data-toggle="table" data-pagination="true" data-page-size="5">
 				   			<thead>
@@ -72,7 +72,7 @@
 										<span th:replace="~{fragments/image_popup :: image_popup(${imageCommand.imageKey})}"></span>
 					   				</td>
 					   				<td class="vert-align">
-					   					<a href="#" th:href="@{'/image/delete/' + ${imageCommand.imageKey}}" class="btn btn-danger" role="button" th:text="#{button.delete}"></a>	
+					   					<a href="#" th:href="@{'/image/delete/' + ${imageCommand.imageKey}}" class="btn btn-danger" role="button" th:text="#{button.delete}"></a>
 					   				</td>
 					   			</tr>
 				   			</tbody>
