--- a/src/main/resources/templates/image/image_upload.html
+++ b/src/main/resources/templates/image/image_upload.html
@@ -27,7 +27,7 @@
 						</div>
 						<div class="">
 							<input id="myFileBase64" type="hidden" name="myFileBase64" value="" />
-							<img id="preview" class="img-responsive"/>
+							<img id="preview" class="img-thumbnail"/>
 						</div>
 						<div class="mb-3">
 							<label class="form-label" th:text="#{image.upload.rotate}"></label><br/>
@@ -49,9 +49,9 @@
 				    </form>
 			    </div>
 			</div>
-			<br/>
-			<div class="row">
-				<div class="col-12 col-sm-12 col-md-12">
+
+			<div class="row mt-3">
+				<div class="col-12">
 					<div class="table-responsive">
 				   		<table class="table table-condensed table-striped table-responsive" data-toggle="table" data-pagination="true" data-page-size="5">
 				   			<thead>
