--- a/src/main/resources/templates/image/gallery.html
+++ b/src/main/resources/templates/image/gallery.html
@@ -8,16 +8,14 @@
 	</head>
 	<body>
 		<div layout:fragment="content" class="container">
-			<div class="row">
-				<div class="col-12 col-sm-6 col-md-4">
-					<div id="links" class="gallery-images">
-						<div th:id="${galleryGroup}" th:each="galleryGroup : ${groupedImageCommands.keySet()}">
-							<br/>
-							<span class="fw-bold" th:text="${galleryGroup}"></span>
-							<br/>
+			<div class="row mb-3">
+				<div class="col-12">
+					<div id="links">
+						<div class="" th:id="${galleryGroup}" th:each="galleryGroup : ${groupedImageCommands.keySet()}">
+							<span class="fw-bold" th:text="${galleryGroup}"></span><br/>
 							<a th:each="imageCommand : ${groupedImageCommands.get(galleryGroup)}" th:href="@{'/gallery/show/' + ${imageCommand.imageKey}}"
 										th:title="${imageCommand.description}" th:attr="data-gallery='#blueimp-gallery-'+${imageCommand.galleryGroup}">
-								<img th:src="@{'/gallery/showthumb/' + ${imageCommand.imageKey}}" th:alt="${imageCommand.imageKey}" class="img-responsive gallery"/>
+								<img th:src="@{'/gallery/showthumb/' + ${imageCommand.imageKey}}" th:alt="${imageCommand.imageKey}" class="img-responsive mt-2 me-2 mb-2"/>
 						    </a>
 						</div>
 					</div>
@@ -33,17 +31,14 @@
 					</div>
 				</div>
 			</div>
-			<br/>
-			<div class="row">
-				<div class="col-12 col-sm-6 col-md-4">
+
+			<div class="row mb-3">
+				<div class="col-12 col-sm-3">
 					<a href="#" th:href="@{/image/show}" class="btn btn-primary" th:text="#{image.gallery.toUploadImagePage}"></a>
 				</div>
-			</div>
-			<br/>
-			<div class="row" th:if="${!groupedImageCommands.isEmpty()}" sec:authorize="hasAuthority('PERM_DOWNLOAD_IMAGES')">
-				<div class="col-12 col-sm-6 col-md-4">
-					<a href="#" th:href="@{/gallery/download/all}" th:text="#{image.gallery.downloadAll}"></a>
-				</div>
+                <div class="col-12 col-sm-6" th:if="${!groupedImageCommands.isEmpty()}" sec:authorize="hasAuthority('PERM_DOWNLOAD_IMAGES')">
+                    <a href="#" th:href="@{/gallery/download/all}" th:text="#{image.gallery.downloadAll}"></a>
+                </div>
 			</div>
 		</div>
 	</body>
