--- a/src/main/resources/templates/image/image_upload.html
+++ b/src/main/resources/templates/image/image_upload.html
@@ -45,10 +45,10 @@
                     <div class="col-12 col-sm-2">
                         <div class="mb-3">
                             <label class="form-label" th:text="#{image.upload.rotate}"></label><br/>
-                            <button type="button" class="btn btn-dark" data-deg="-90">
+                            <button type="button" class="rotate-image-btn btn btn-dark" data-deg="-90">
                                 <i class="fas fa-undo" aria-hidden="true"></i>
                             </button>
-                            <button type="button" class="btn btn-dark" data-deg="90">
+                            <button type="button" class="rotate-image-btn btn btn-dark" data-deg="90">
                                 <i class="fas fa-redo" aria-hidden="true"></i>
                             </button>
                         </div>
