--- a/src/main/resources/templates/bet/extra_others.html
+++ b/src/main/resources/templates/bet/extra_others.html
@@ -7,14 +7,14 @@
 		<div layout:fragment="content">
 			<h1 th:text="#{bet.extra.others.title}"></h1>
 			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-4" th:each="extraBet : ${allExtraBets}">
-					<div class="panel ">
-						<div class="panel-heading">
+				<div class="col-12 col-sm-6 col-md-4" th:each="extraBet : ${allExtraBets}">
+					<div class="card">
+						<div class="card-header">
 							<span th:replace="~{fragments/profile_image :: profile_image_small_with_popup(${@webSecurityUtil.getUserProfileImageKeyFor(extraBet.userName)})}"></span>
 							<span th:text="${extraBet.userName}"></span>
-							<span class="label label-warning label-as-badge big-badge right" th:text="${extraBet.points}"></span>
+							<span class="badge rounded-pill bg-warning big-badge right" th:text="${extraBet.points}"></span>
 						</div>
-					   <div class="panel-body">
+					   <div class="card-body">
 						   <div class="table-responsive">
 						   		<table class="table table-condensed">
 						   			<tr>
@@ -42,7 +42,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-4">
+				<div class="col-12 col-sm-6 col-md-4">
 					<div class="form-group">
 						<a href="#" th:href="@{/extrabets}" class="btn btn-default" role="button" th:text="#{button.back}"></a>
 					</div>
