--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -5,7 +5,7 @@
     <title>Navigation page</title>
 </head>
 <body>
-<nav th:fragment="menu" class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav th:fragment="menu" class="navbar navbar-expand-lg bg-primary" th:classappend="${@runtimeSettingsUtil.getSettings().getNavbarLayout().getNavbarTag()}">
     <div class="container">
         <a class="navbar-brand" th:href="@{/matches/upcoming}"><i class="fas fa-home"></i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
