--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" th:href="@{/webjars/font-awesome/css/solid.min.css}" />
 		<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
         <link rel="stylesheet" th:href="@{/webjars/bootstrap-icons/font/bootstrap-icons.css}" />
-<!--		<link rel="stylesheet" th:href="${@runtimeSettingsUtil.getSettings().getBootswatchThemeUrl()}" />-->
+		<link rel="stylesheet" th:href="${@runtimeSettingsUtil.getSettings().getBootswatchThemeUrl()}" />
 		<link rel="stylesheet" th:href="@{/lightbox/css/lightbox.min.css}" />
 		<link rel="stylesheet" th:href="@{/css/custom.css}" />
 	</head>
